Added Macrolab cloning details

--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -178,7 +178,8 @@ We hope eventually to develop a fully automated software package for the selecti
 For each target, the selected construct sequence was subcloned from the selected DNA plasmid.
 Expression testing performed by QB3 MacroLab.
 
-High-throughput cloning was performed using LIC (Ligation Independent Cloning). {\color{blue}[LRL: There wasn't any details on how the Macrolab performed the cloning in the p470 Kinase Expression Testing Report. But I read in their website that this is the method commonly used.]}
+All genes were cloned into the 2BT10 plasmid, an AMP resistant ColE1 plasmid with a T7 promoter.
+Each protein was tagged with a N-terminal His10-TEV and co-expressed with either YopH (for Tyr kinases) or lambda phosphatase (for Ser/Thr kinases). 
 Single colonies of transformants were cultivated with 900 $\mu$L of MagicMedia into a gas permeable sealed 96-well block. 
 The cultures were incubated at 37 C for 4 hours and then at 16 C for 40 hours while shacking. 
 Next, cells were centrifuged and the pellets were frozen at -80 C overnight. 
