Added phosphatase coexpression details

--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -174,12 +174,12 @@ We hope eventually to develop a fully automated software package for the selecti
 
 \subsection{Expression testing}
 
-{\color{blue} TODO}
+
 For each target, the selected construct sequence was subcloned from the selected DNA plasmid.
 Expression testing performed by QB3 MacroLab.
 
 All genes were cloned into the 2BT10 plasmid, an AMP resistant ColE1 plasmid with a T7 promoter.
-Each protein was tagged with a N-terminal His10-TEV and co-expressed with either YopH (for Tyr kinases) or lambda phosphatase (for Ser/Thr kinases). 
+Each kinase domain was tagged with a N-terminal His10-TEV and co-expressed with either YopH (for Tyr kinases) or lambda phosphatase (for Ser/Thr kinases). 
 Single colonies of transformants were cultivated with 900 $\mu$L of MagicMedia into a gas permeable sealed 96-well block. 
 The cultures were incubated at 37 C for 4 hours and then at 16 C for 40 hours while shacking. 
 Next, cells were centrifuged and the pellets were frozen at -80 C overnight. 
@@ -192,6 +192,20 @@ A subsequent wash with 40 $\mu$L of Nickel Buffer A was performed to release mor
 Nickel Buffer B (25 mM HEPES pH 7.5, 5\% glycerol, 400 mM NaCl, 400 mM imidazole, 1 mM BME) was used to elute TEV resistant material remaining on the resin.
 Untagged protein eluted with TEV protease was run on a LabChip GX II Microfluidic system to analyze the mayor protein species present. 
 Samples of total cell lysate, soluble cell lysate and Nickel Buffer B elution were run on a SDS-PAGE for analysis. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% RESULTS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Results}
+\label{section:results}
+
+\subsection{PDBs mining results}
+
+\subsection{Small-scale kinase expression test in E. coli}
+
+A panel containing the 96 kinase domain constructs selected through our semi-automated method, was tested for expression in E. coli. 
+From this initial test, 68 kinase domains expressed successfully (yield of more than 2 ng/$\mu$L ). 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BIBLIOGRAPHY
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
