--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -60,9 +60,25 @@
 %% TITLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{(Placeholder) Automatic selection of kinase expression constructs}
 
-\author{TBD}
+\author{Daniel L. Parton}
   \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
-  %\email{daniel.parton@choderalab.org}
+  \email{daniel.parton@choderalab.org}
+\author{Sonya M. Hanson}
+  \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
+  \email{sonya.hanson@choderalab.org}
+\author{Lucelenie Rodriguez}
+  \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
+  \email{lucelenie.rodriguez@choderalab.org}
+\author{Scott Gradia}
+  \affiliation{QB3 MacroLab, University of California, Berkeley, CA 94720}
+  \thanks{Current address: Caribou Biosciences, Berkeley, CA 94720}
+  \email{sgradia@cariboubio.com}
+\author{Chris Jeans}
+  \affiliation{QB3 MacroLab, University of California, Berkeley, CA 94720}
+  \email{c.jeans@berkeley.edu}
+\author{Markus Seeliger}
+%  \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
+%  \email{lucelenie.rodriguez@choderalab.org}
 \author{John D. Chodera}
  \thanks{Corresponding author}
  \email{john.chodera@choderalab.org}
@@ -93,6 +109,8 @@ When attempting to carry out expression on a family or superfamily scale, it is 
 One source of expression construct data which is programmatically accessible is the Protein Data Bank (PDB).
 Our method is thus based around searching the PDB for relevant expression constructs.
 PDB data includes expression system and experimental construct, though as we discovered in our research, the latter suffers from frequent problems with misannotation, necessitating us to develop a method to determine authentic experimental sequences.
+
+All code and source files used in this project can be found at \url{https://github.com/choderalab/kinase-ecoli-expression-panel}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % METHODS
