--- a/manuscript/ms.tex
+++ b/manuscript/ms.tex
@@ -58,7 +58,7 @@
 \begin{document}
 
 %% TITLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{(Placeholder) Automatic selection of kinase expression constructs}
+\title{An open library of human kinase domain constructs for automated bacterial expression}
 
 \author{Daniel L. Parton}
   \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
@@ -66,9 +66,12 @@
 \author{Sonya M. Hanson}
   \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
   \email{sonya.hanson@choderalab.org}
-\author{Lucelenie Rodriguez}
+\author{Lucelenie Rodríguez-Laureano}
   \affiliation{Computational Biology Program, Sloan Kettering Institute, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
   \email{lucelenie.rodriguez@choderalab.org}
+\author{Steven K. Albanese}
+  \affiliation{Gerstner Sloan Kettering Graduate School, Memorial Sloan Kettering Cancer Center, New York, NY 10065}
+  \email{steven.albanese@choderalab.org}
 \author{Scott Gradia}
   \affiliation{QB3 MacroLab, University of California, Berkeley, CA 94720}
   \thanks{Current address: Caribou Biosciences, Berkeley, CA 94720}
@@ -213,19 +216,22 @@ For each target, the selected construct sequence was subcloned from the selected
 Expression testing performed by QB3 MacroLab.
 
 All genes were cloned into the 2BT10 plasmid, an AMP resistant ColE1 plasmid with a T7 promoter.
-Each kinase domain was tagged with a N-terminal His10-TEV and co-expressed with either YopH (for Tyr kinases) or lambda phosphatase (for Ser/Thr kinases). 
+Each kinase domain was tagged with a N-terminal His10-TEV and co-expressed with either the truncated YopH164 (for Tyr kinases) or lambda phosphatase (for Ser/Thr kinases). 
+Expression was performed in Rosetta2 cells grown with Magic Media (Invitrogen autoinducing medium), 100 $\mu$g/mL of carbenicillin and 100 $\mu$g/mL of spectinomycin. 
 Single colonies of transformants were cultivated with 900 $\mu$L of MagicMedia into a gas permeable sealed 96-well block. 
-The cultures were incubated at 37 C for 4 hours and then at 16 C for 40 hours while shacking. 
-Next, cells were centrifuged and the pellets were frozen at -80 C overnight. 
-Cells were lysed on a rotating platform at room temperature for an hour using 700 $\mu$L of Solulyse (Genlantis) supplemented with 400 mM NaCl, 20 mM imidazole and protease inhibitors. 
+The cultures were incubated at 37$^\circ$C for 4 hours and then at 16 $^\circ$C for 40 hours while shaking. 
+Next, cells were centrifuged and the pellets were frozen at -80 $^\circ$C overnight. 
+Cells were lysed on a rotating platform at room temperature for an hour using 700 $\mu$L of SoluLyse (Genlantis) supplemented with 400 mM NaCl, 20 mM imidazole and protease inhibitors. 
+
 For protein purification, 500 $\mu$L of the soluble lysate was added to a 25 $\mu$L Ni-NTA resin in a 96-well filter plate. 
-Nickel Buffer A (25 mM HEPES pH 7.5, 5\% glycerol, 400 mM NaCl, 20 mM imidazole, 1 mM BME) was added and the plate was mixed for 30 minutes at room temperature. 
+Nickel Buffer A (25 mM HEPES pH 7.5, 5\% glycerol, 400 mM NaCl, 20 mM imidazole, 1 mM BME) was added and the plate was shaken for 30 minutes at room temperature. 
 The resin was washed with 2 mL of Nickel Buffer A. 
-Target proteins were eluted by a 2 hour incubation at room temperature with 10 $\mu$g of TEV protease in 80 $\mu$L of Nickel Buffer A.
-A subsequent wash with 40 $\mu$L of Nickel Buffer A was performed to release more target protein. 
+Target proteins were eluted by a 2 hour incubation at room temperature with 10 $\mu$g of TEV protease in 80 $\mu$L of Nickel Buffer A per well and a subsequent wash with 40 $\mu$L of Nickel Buffer A to maximize protein release. 
 Nickel Buffer B (25 mM HEPES pH 7.5, 5\% glycerol, 400 mM NaCl, 400 mM imidazole, 1 mM BME) was used to elute TEV resistant material remaining on the resin.
-Untagged protein eluted with TEV protease was run on a LabChip GX II Microfluidic system to analyze the mayor protein species present. 
+Untagged protein eluted with TEV protease was run on a LabChip GX II Microfluidic system to analyze the major protein species present. 
 Samples of total cell lysate, soluble cell lysate and Nickel Buffer B elution were run on a SDS-PAGE for analysis. 
+
+We are currently making the library of kinase domain constructs, generated in this work, available for distribution through the plasmid repository \href{https://www.addgene.org/}{Addgene} . In the meantime, you can contact the  \href{http://www.choderalab.org/members}{Chodera Lab} for a plasmid request.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % RESULTS
