Added protein expression reference.

--- a/manuscript/ms.bib
+++ b/manuscript/ms.bib
@@ -1,3 +1,19 @@
+@article{klock_combining_2008,
+	title = {Combining the polymerase incomplete primer extension method for cloning and mutagenesis with microscreening to accelerate structural genomics efforts},
+	volume = {71},
+	issn = {08873585, 10970134},
+	url = {http://doi.wiley.com/10.1002/prot.21786},
+	doi = {10.1002/prot.21786},
+	language = {en},
+	number = {2},
+	urldate = {2016-02-02},
+	journal = {Proteins: Structure, Function, and Bioinformatics},
+	author = {Klock, Heath E. and Koesema, Eric J. and Knuth, Mark W. and Lesley, Scott A.},
+	month = may,
+	year = {2008},
+	pages = {982--994},
+	file = {Klock_et_al-2008-Proteins-_Structure,_Function,_and_Bioinformatics.pdf:/Users/hansons/Library/Application Support/Firefox/Profiles/qqfny0pb.default/zotero/storage/BJSM87UJ/Klock_et_al-2008-Proteins-_Structure,_Function,_and_Bioinformatics.pdf:application/pdf}
+}
 @article{chodera:plos-comp-bio:2016:ensembler,
 	Author = {Daniel L. Parton and Patrick B. Grinaway and Sonya M. Hanson and Kyle A. Beauchamp and John D. Chodera},
 	Title = {Ensembler: Enabling high-throughput molecular simulations at the superfamily scale},
